# Effective-methods-of-real-time-light-atmospheric-scattering-simulation

./: README.md
chapter5-splines-taylor/: .gitignore  Makefile  README.md  main.cc  randomseed  timing.h
chapter5-splines-taylor/atmosphere/: atmosphere.h
chapter5-splines-taylor/atmosphere/model/bruneton/: bruneton.cc
chapter5-splines-taylor/atmosphere/model/haber/: haber.cc
chapter5-splines-taylor/atmosphere/model/hosek/: hosek.cc
chapter5-splines-taylor/atmosphere/model/nishita/: nishita93.cc
chapter5-splines-taylor/atmosphere/model/oneal/: oneal.cc
chapter5-splines-taylor/atmosphere/model/preetham/: preetham.cc
chapter5-splines-taylor/atmosphere/model/spline/: Spline2dSolution.cpp  Spline2dSolution.h  spline.cc  spline.h
chapter5-splines-taylor/atmosphere/model/taylor/: taylor.cc  taylor.h
chapter5-splines-taylor/atmosphere/model/trapezoidal/: trapezoidal.cc  trapezoidal.h
chapter5-splines-taylor/input/: astm-g173.txt  kider_full_day_irradiance_raw_2013_5_27.txt
chapter5-splines-taylor/output/: gen_avg_delta_e.py  gen_lab_diffs.bat  gen_lab_diffs_bat.py
chapter5-splines-taylor/results_generator/: fig_absolute_luminance.tex  fig_approx_spectral.tex  fig_chromaticity.tex  fig_lab_error.tex  fig_luminance_profile.tex  fig_phasefunction.tex  fig_polarization.tex  fig_qualitative_comparison.tex  fig_relative_error.tex  fig_relative_luminance.tex  fig_rendering.tex  fig_rgb_rendering.tex  fig_sky_irradiance.tex  fig_spectral_radiance.tex  fig_userstudy.tex  references.bib  results-generator.tex
chapter6-mlp/: .gitignore  CMakeLists.txt  README.md
chapter6-mlp/AtmosphereSoftwareRenderer/: CMakeLists.txt
chapter6-mlp/AtmosphereSoftwareRenderer/res/: nn_lut_512_128_128_128_128_rm_earth.model  nn_lut_512_128_128_128_128_rm_multi_planets-100.model
chapter6-mlp/AtmosphereSoftwareRenderer/src/: Bitmap.cpp  Bitmap.h  Display.cpp  Display.h  Edge.cpp  Edge.h  Gradients.cpp  Gradients.h  MathUtils.cpp  MathUtils.h  Mesh.cpp  Mesh.h  OBJModel.cpp  OBJModel.h  RenderContext.cpp  RenderContext.h  Timing.cpp  Timing.h  Vertex.cpp  Vertex.h  main.cpp
chapter6-mlp/AtmosphereSoftwareRenderer/src/apps/: AtmoElek.cpp  AtmoElek.h  AtmoNN.cpp  AtmoNN.h
chapter6-mlp/AtmosphereSoftwareRenderer/src/atmosphere/raytracer/: Camera.cpp  Camera.h  Options.h
chapter6-mlp/AtmosphereSoftwareRenderer/src/atmosphere/skymodels/: Atmosphere.cpp  Atmosphere.h
chapter6-mlp/AtmosphereSoftwareRenderer/src/atmosphere/skymodels/deep_as/: DeepAS.cpp  DeepAS.h
chapter6-mlp/AtmosphereSoftwareRenderer/src/atmosphere/skymodels/precomputed_ss/: PrecomputedSS.cpp  PrecomputedSS.h
chapter6-mlp/include/: colourmanager.h
chapter6-mlp/python_nn_training/: atmo.py  atmo_img_based.py  atmo_nn.py  atmo_rendering.py  camera.py  model_training.py  planets_data.xlsx  utils.py
chapter6-mlp/python_nn_training/hdr_merge/: create_dataset_from_hdr.py  hdr_merge_tool.py
chapter6-mlp/res/: nn_img_based_real_256_256_10l-88.model  nn_img_based_synth_256_256_10l-84.model  nn_img_based_tf_real_256_256-81.model  nn_lut_512_128_128_128_128_rm_earth_10layers-587.model  nn_lut_512_128_128_128_128_rm_earth_3layers-186.model  nn_lut_512_128_32_32_32_rm_earth_3layers-1559.model  nn_lut_512_128_32_32_32_rm_earth_3layers-437.model  nn_lut_512_128_64_64_64_rm_earth_3layers-390.model
chapter6-mlp/src/: main.cpp
chapter6-mlp/src/raytracer/: Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  Options.h  Ray.h  RootDir.h.in  Scene.cpp  Scene.h  Timing.cpp  Timing.h  Utils.h
chapter6-mlp/src/skymodels/: Atmosphere.cpp  Atmosphere.h
chapter6-mlp/src/skymodels/deep_as/: DeepAS.cpp  DeepAS.h
chapter6-mlp/src/skymodels/img_based/: ImgBased.cpp  ImgBased.h
chapter6-mlp/src/skymodels/midpoint/: Midpoint.cpp  Midpoint.h
chapter6-mlp/src/skymodels/precomputed_ss/: PrecomputedSS.cpp  PrecomputedSS.h
